--- a/src/components/NoteList/NoteList.module.css
+++ b/src/components/NoteList/NoteList.module.css
@@ -53,7 +53,19 @@
   .button:hover {
     background-color: #bb2d3b;
   }
-  
+
+  .button:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+.button:hover:not(:disabled){
+  background-color: #db6c79;
+}
+.buttonLoading{
+    background-color: #bb4e5a;
+    cursor: wait;
+  } 
+
   .footer {
     display: flex;
     justify-content: space-between;
